--- a/PyBank/PyBank.ipynb
+++ b/PyBank/PyBank.ipynb
@@ -2,7 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 238,
+   "id": "1c31da6b-cf3f-49a0-a4f1-c13485c87f03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This Python script will analyzes the records to calculate each of the following:\n",
+    "# - The total number of months included in the dataset.\n",
+    "# - The net total amount of Profit/Losses over the entire period.\n",
+    "# - The average of the changes in Profit/Losses over the entire period.\n",
+    "# - The greatest increase in profits (date and amount) over the entire period.\n",
+    "# - The greatest decrease in losses (date and amount) over the entire period."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
    "id": "8cacf9cb-82a5-4e2b-9020-072251360066",
    "metadata": {},
    "outputs": [],
@@ -12,17 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 240,
    "id": "892fc046-3f67-49b4-89f6-2f682695d75b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports the CSV module\n",
     "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 241,
    "id": "79445db8-236d-4a7f-95d0-91df1ac6896e",
    "metadata": {},
    "outputs": [],
@@ -32,17 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "id": "7abaaccb-cea0-4a9c-b7e3-920621ffca92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "profit_loss = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 242,
    "id": "93a7695e-3650-4855-bf18-069bedf7982d",
    "metadata": {},
    "outputs": [],
@@ -52,7 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 243,
+   "id": "288dedd0-6214-4fed-9ded-91bf2a80d991",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profit_loss = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
    "id": "f674f3d9-321e-4560-bde5-3360b9f6dc66",
    "metadata": {},
    "outputs": [],
@@ -62,7 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 245,
+   "id": "f68d781b-2107-44f8-aa1f-b3bf4656e24a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_pl = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
    "id": "989ed5c6-050a-49a3-ad58-f545a77634c3",
    "metadata": {},
    "outputs": [],
@@ -72,17 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "id": "2bf99afc-0959-4991-8506-04f6a1b2b6a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "min_pl = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 247,
    "id": "a9cffdfe-9e0f-4287-a63c-1e0b01792c17",
    "metadata": {},
    "outputs": [],
@@ -98,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 248,
    "id": "4bf7bc15-2594-4ac6-9d51-40c6412ad820",
    "metadata": {},
    "outputs": [],
@@ -108,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 249,
    "id": "45224e20-c1d9-42fb-96b0-c8233b3b754b",
    "metadata": {},
    "outputs": [],
@@ -120,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 250,
    "id": "ab572dd4-2e17-4693-b26a-0202c7624583",
    "metadata": {},
    "outputs": [],
@@ -130,13 +146,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 251,
    "id": "ec2966b2-7465-4fb1-a704-e21a9ea077d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_pl = 0\n",
     "min_pl = 0\n",
+    "max_pl = 0\n",
     "for prof_loss in profit_loss:\n",
     "    if prof_loss > max_pl:\n",
     "        max_pl = prof_loss\n",
@@ -146,20 +162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 252,
    "id": "37d1f07a-dfe7-4ee4-9f2a-c2279eb1afed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_pl_index = profit_loss.index(max_pl)\n",
     "min_pl_index = profit_loss.index(min_pl)\n",
-    "max_pl_date = profit_loss_dates[max_pl_index]\n",
-    "min_pl_date = profit_loss_dates[min_pl_index]"
+    "max_pl_index = profit_loss.index(max_pl)\n",
+    "min_pl_date = profit_loss_dates[min_pl_index]\n",
+    "max_pl_date = profit_loss_dates[max_pl_index]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 253,
    "id": "ddcfa131-bc2e-455f-950b-f003be6daf22",
    "metadata": {},
    "outputs": [
@@ -167,49 +183,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
       "Financial Analysis\n",
-      "----------------------------\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
       "Total Months: 86\n",
       "Total: 38382578\n",
       "Average Change: -2315.12\n",
       "Greatest Increase in Profits: 1170593 on Feb-2012\n",
-      "Greatest Decrease in Profits: -1196225 on Sep-2013\n"
+      "Greatest Decrease in Profits: -1196225 on Sep-2013\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
      ]
     }
    ],
    "source": [
+    "# Prints the Financial Analysis to the screen\n",
+    "print(f\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\")\n",
     "print(f\"Financial Analysis\")\n",
-    "print(f\"----------------------------\")\n",
+    "print(f\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\")\n",
     "print(f\"Total Months: {len(profit_loss_dates)}\")\n",
     "print(f\"Total: {profit_loss_sum}\")\n",
     "print(f\"Average Change: {average_change_profitloss}\")\n",
     "print(f\"Greatest Increase in Profits: {max_pl} on {max_pl_date}\")\n",
-    "print(f\"Greatest Decrease in Profits: {min_pl} on {min_pl_date}\")"
+    "print(f\"Greatest Decrease in Profits: {min_pl} on {min_pl_date}\")\n",
+    "print(f\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 254,
    "id": "d1a841a8-d52c-4dc5-9245-ca7b158a9664",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creates a Financial Analysis file in text format\n",
     "with open('financial_analysis.txt', 'w') as text:\n",
-    "    text.write(\"----------------------------------------------------------\\n\")\n",
-    "    text.write(\"  Financial Analysis\"+ \"\\n\")\n",
-    "    text.write(\"----------------------------------------------------------\\n\")\n",
-    "    text.write(\"    Total Months: \" + str(len(profit_loss_dates)) + \"\\n\")\n",
-    "    text.write(\"    Total Profits: \" + \"$\" + str(profit_loss_sum) +\"\\n\")\n",
-    "    text.write(\"    Average Change: \" + '$' + str(int(average_change_profitloss)) + \"\\n\")\n",
-    "    text.write(\"    Greatest Increase in Profits: \" + str(max_pl_date) + \" ($\" + str(max_pl) + \")\\n\")\n",
-    "    text.write(\"    Greatest Decrease in Profits: \" + str(min_pl_date) + \" ($\" + str(min_pl) + \")\\n\")\n",
-    "    text.write(\"----------------------------------------------------------\\n\")"
+    "    text.write(\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\\n\")\n",
+    "    text.write(\"Financial Analysis\"+ \"\\n\")\n",
+    "    text.write(\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\\n\")\n",
+    "    text.write(\"Total Months: \" + str(len(profit_loss_dates)) + \"\\n\")\n",
+    "    text.write(\"Total Profits: \" + \"$\" + str(profit_loss_sum) +\"\\n\")\n",
+    "    text.write(\"Average Change: \" + '$' + str(float(average_change_profitloss)) + \"\\n\")\n",
+    "    text.write(\"Greatest Increase in Profits: \" + str(max_pl_date) + \" ($\" + str(max_pl) + \")\\n\")\n",
+    "    text.write(\"Greatest Decrease in Profits: \" + str(min_pl_date) + \" ($\" + str(min_pl) + \")\\n\")\n",
+    "    text.write(\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\\n\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6faa96f-ab71-4f1c-b0ac-5b8c1e7a8ade",
+   "id": "fe7d8ca3-2a10-4b7e-8693-759b610fe7e2",
    "metadata": {},
    "outputs": [],
    "source": []
