--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 133,
    "id": "df571afb-6324-45d0-adbc-980ed6b673fc",
    "metadata": {
     "tags": []
@@ -19,20 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 134,
    "id": "89ca65d8-dc33-4dcd-82e2-23b7a5b3e052",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# pathlib allows you to iterate over that directory's content\n",
+    "# import libraries, pathlib allows you to iterate over that directory's content\n",
     "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 135,
    "id": "56c9e089-704f-4bff-9482-18a0eb65bb9f",
    "metadata": {
     "tags": []
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 136,
    "id": "a5117c8e-4d51-453e-ac3b-8027686a07fb",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 137,
    "id": "7571f94a-b9a4-45bd-9593-c4551f66f7ad",
    "metadata": {
     "tags": []
@@ -76,15 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 138,
    "id": "dde33f61-e691-4f7e-a4f3-42af7cf2e8f8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# open input path as file object \n",
     "with open(budget_csv, 'r') as csvfile:\n",
+    "    # pass the object to a csv.reader()\n",
     "    csv_reader = csv.reader(csvfile, delimiter = ',')\n",
+    "    # Skip the header and iterate through the first row by 1\n",
     "    header = next(csv_reader)\n",
+    "    # print (header)\n",
+    "    # for loop\n",
     "    for row in csv_reader:\n",
+    "        # print(row)\n",
     "        profit_loss.append(int(row[1]))\n",
     "        profit_loss_sum += int(row[1])\n",
     "        profit_loss_dates.append(row[0])"
@@ -92,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 139,
    "id": "2be2e363-e91a-402c-b5d8-a813f9d12d67",
    "metadata": {},
    "outputs": [],
@@ -104,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 140,
    "id": "a816c105-5b3a-4c48-9c31-4c0124c4e942",
    "metadata": {},
    "outputs": [],
@@ -115,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 141,
    "id": "77356cfd-4aab-41e9-a847-b647f7734551",
    "metadata": {},
    "outputs": [],
@@ -129,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 142,
    "id": "84d77a74-3c45-4e92-b50f-3351af47fb80",
    "metadata": {},
    "outputs": [],
@@ -142,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 143,
    "id": "05fe7cd0-6f39-44e7-b984-7eb90e045226",
    "metadata": {},
    "outputs": [
@@ -178,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 144,
    "id": "15bf52dc-a5fa-4f8d-a7bf-e81f7f48c4ef",
    "metadata": {},
    "outputs": [],
@@ -195,14 +201,6 @@
     "    text.write(\"\\n\"\"Greatest Decrease in Profits: \" + str(min_profit_loss_date) + \" ($\" + str(min_profit_loss) + \")\")\n",
     "    text.write(\"\\n\"\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53bf11be-f898-46a4-9016-25faecc77b40",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
