--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 44,
    "id": "df571afb-6324-45d0-adbc-980ed6b673fc",
    "metadata": {
     "tags": []
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 45,
    "id": "89ca65d8-dc33-4dcd-82e2-23b7a5b3e052",
    "metadata": {
     "tags": []
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 46,
    "id": "56c9e089-704f-4bff-9482-18a0eb65bb9f",
    "metadata": {
     "tags": []
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 47,
    "id": "a5117c8e-4d51-453e-ac3b-8027686a07fb",
    "metadata": {},
    "outputs": [],
@@ -56,27 +56,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 48,
    "id": "7571f94a-b9a4-45bd-9593-c4551f66f7ad",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# create lists\n",
+    "# create empty lists to iterate through rows\n",
     "profit_loss_dates = []\n",
     "profit_loss = []\n",
     "profit_loss_change = []\n",
     "# Set variables\n",
-    "profit_loss_sum = 0\n",
-    "PnL = 0\n",
     "min_profit_loss = 0\n",
     "max_profit_loss = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 49,
    "id": "dde33f61-e691-4f7e-a4f3-42af7cf2e8f8",
    "metadata": {},
    "outputs": [],
@@ -88,29 +86,54 @@
     "    # Skip the header and iterate through the first row by 1\n",
     "    header = next(csv_reader)\n",
     "    # print (header)\n",
-    "    # for loop\n",
+    "    # the for loop is to iterate through rows in the stored file contents\n",
     "    for row in csv_reader:\n",
-    "        # print(row)\n",
-    "        profit_loss.append(int(row[1]))\n",
-    "        profit_loss_sum += int(row[1])\n",
-    "        profit_loss_dates.append(row[0])"
+    "        # Appends the total months/dates as well as total profit to their corresponding lists\n",
+    "        profit_loss_dates.append(row[0])\n",
+    "        profit_loss.append(int(row[1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "2be2e363-e91a-402c-b5d8-a813f9d12d67",
+   "execution_count": 50,
+   "id": "e721a31e-63f2-4ed5-88ed-333debf70db3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1, len(profit_loss)):\n",
-    "    x = profit_loss[i] - profit_loss[i - 1]\n",
-    "    profit_loss_change.append(int(x))"
+    "# Iterate through the profit_loss in order to get the monthly change in profits\n",
+    "for i in range(len(profit_loss)-1):\n",
+    "    # Take the differences between months and append to monthly profit loss profit change\n",
+    "    profit_loss_change.append(profit_loss[i+1]-profit_loss[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 51,
+   "id": "a1a451ba-ff42-4625-bf41-e2c32c759213",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the min and max of the monthly profit loss change\n",
+    "max_increase_profit_loss = max(profit_loss_change)\n",
+    "max_decrease_profit_loss = min(profit_loss_change)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "64e5c8d9-3431-4161-be91-78b4b9c63951",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correlate min and max to the proper date using profit loss list and index from max and min\n",
+    "# plus 1 at the end since month associated with change is the next month\n",
+    "max_increase_date = profit_loss_change.index(max(profit_loss_change)) + 1\n",
+    "max_decrease_date = profit_loss_change.index(min(profit_loss_change)) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "id": "a816c105-5b3a-4c48-9c31-4c0124c4e942",
    "metadata": {},
    "outputs": [],
@@ -121,34 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "id": "77356cfd-4aab-41e9-a847-b647f7734551",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for PnL in profit_loss:\n",
-    "    if PnL > max_profit_loss:\n",
-    "        max_profit_loss = PnL\n",
-    "    elif PnL < min_profit_loss:\n",
-    "        min_profit_loss = PnL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "id": "84d77a74-3c45-4e92-b50f-3351af47fb80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "min_profit_loss_index = profit_loss.index(min_profit_loss)\n",
-    "max_profit_loss_index = profit_loss.index(max_profit_loss)\n",
-    "min_profit_loss_date = profit_loss_dates[min_profit_loss_index]\n",
-    "max_profit_loss_date = profit_loss_dates[max_profit_loss_index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 54,
    "id": "05fe7cd0-6f39-44e7-b984-7eb90e045226",
    "metadata": {},
    "outputs": [
@@ -160,10 +156,10 @@
       "\u001b[1mFinancial Analysis\u001b[0m\n",
       "\u001b[1m~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\u001b[0m\n",
       "Total Months: 86\n",
-      "Total: 38382578\n",
+      "Total: $38382578\n",
       "Average Change: -2315.12\n",
-      "Greatest Increase in Profits: 1170593 on Feb-2012\n",
-      "Greatest Decrease in Profits: -1196225 on Sep-2013\n",
+      "Greatest Increase in Profits: Feb-2012 ($1926159)\n",
+      "Greatest Decrease in Profits: Sep-2013 ($-2196167)\n",
       "\u001b[1m~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\u001b[0m\n"
      ]
     }
@@ -175,17 +171,17 @@
     "print(f'\\033[1m' + 'Financial Analysis' + '\\033[0m')\n",
     "print(f'\\033[1m' + '~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~' + '\\033[0m')\n",
     "print(f\"Total Months: {len(profit_loss_dates)}\")\n",
-    "print(f\"Total: {profit_loss_sum}\")\n",
-    "print(f\"Average Change: {average_change_profitloss}\")\n",
-    "print(f\"Greatest Increase in Profits: {max_profit_loss} on {max_profit_loss_date}\")\n",
-    "print(f\"Greatest Decrease in Profits: {min_profit_loss} on {min_profit_loss_date}\")\n",
+    "print(f\"Total: ${sum(profit_loss)}\")\n",
+    "print(f\"Average Change: {round(sum(profit_loss_change)/len(profit_loss_change),2)}\")\n",
+    "print(f\"Greatest Increase in Profits: {profit_loss_dates[max_increase_date]} (${(str(max_increase_profit_loss))})\")\n",
+    "print(f\"Greatest Decrease in Profits: {profit_loss_dates[max_decrease_date]} (${(str(max_decrease_profit_loss))})\")\n",
     "print(f'\\033[1m' + '~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~' + '\\033[0m')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "id": "15bf52dc-a5fa-4f8d-a7bf-e81f7f48c4ef",
+   "execution_count": 55,
+   "id": "bd997b91-02e9-456e-98c7-4c6d37f02d8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,13 +190,27 @@
     "    text.write(\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\")\n",
     "    text.write(\"\\n\"\"Financial Analysis\")\n",
     "    text.write(\"\\n\"\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\")\n",
-    "    text.write(\"\\n\"\"Total Months: \" + str(len(profit_loss_dates)))\n",
-    "    text.write(\"\\n\"\"Total Profits: \" + \"$\" + str(profit_loss_sum))\n",
-    "    text.write(\"\\n\"\"Average Change: \" + '$' + str(float(average_change_profitloss)))\n",
-    "    text.write(\"\\n\"\"Greatest Increase in Profits: \" + str(max_profit_loss_date) + \" ($\" + str(max_profit_loss) + \")\")\n",
-    "    text.write(\"\\n\"\"Greatest Decrease in Profits: \" + str(min_profit_loss_date) + \" ($\" + str(min_profit_loss) + \")\")\n",
-    "    text.write(\"\\n\"\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\")"
+    "    text.write(\"\\n\")\n",
+    "    text.write(f\"Total Months: \" + str(len(profit_loss_dates)))\n",
+    "    text.write(\"\\n\")\n",
+    "    text.write(f\"Total: ${sum(profit_loss)}\")\n",
+    "    text.write(\"\\n\")\n",
+    "    text.write(f\"Average Change: \" + '$' + str(float(average_change_profitloss)))\n",
+    "    text.write(\"\\n\")\n",
+    "    text.write(f\"Greatest Increase in Profits: {profit_loss_dates[max_increase_date]} (${(str(max_increase_profit_loss))})\")\n",
+    "    text.write(\"\\n\")\n",
+    "    text.write(f\"Greatest Decrease in Profits: {profit_loss_dates[max_decrease_date]} (${(str(max_decrease_profit_loss))})\")\n",
+    "    text.write(\"\\n\")\n",
+    "    text.write(f\"~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34f6768b-60b2-4e2d-9172-24110212da30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
